# PromptOptimizer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  summarize_repo.py
src/promptoptimizerscai/adapters/: base.py  hugging_face_adapter.py  openai_adapter.py
src/promptoptimizerscai/core/: evaluation.py  optimizer.py
src/promptoptimizerscai/orchestration/: agentic_workflow.py  nodes.py  router.py  state.py
src/promptoptimizerscai/prompts/: context_detection.py
tests/: test_adapters.py  test_agentic_workflow.py  test_basic_prompt_optimizer.py  test_evaluation.py  test_langgraph_orchestration.py  test_optimizer_workflow.py  test_scierc_optimizer.py
